# Colada

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  PREREQUISITES.txt  README.md  Tierra-Colada-code-style.xml
Applications/: CMakeLists.txt
Applications/ColadaApp/: CMakeLists.txt  ColadaDBCore.cxx  ColadaDBCore.h  ColadaDBCore_py.cxx  ColadaDBCore_py.h  ColadaUtil.cxx  ColadaUtil.h  ColadaUtil_py.cxx  ColadaUtil_py.h  DevRead.cxx  DevRead.h  Main.cxx  SegyRead.cxx  SegyRead.h  dbcore.cxx  dbcore.h  qAppStyle.h  qCRSDropLineEdit.cxx  qCRSDropLineEdit.h  qCRSDropLineEdit_p.h  qCRSDropTableView.cxx  qCRSDropTableView.h  qCRSDropTableView_p.h  qCRSWidget.cxx  qCRSWidget.h  qCRSWidget_p.h  qCheckableHHeaderView.cxx  qCheckableHHeaderView.h  qCheckableHHeaderView_p.h  qCheckableVHeaderView.cxx  qCheckableVHeaderView.h  qCheckableVHeaderView_p.h  qColadaAppMainWindow.cxx  qColadaAppMainWindow.h  qColadaAppMainWindow_p.h  qColadaAppPythonQtDecorators.cxx  qColadaAppPythonQtDecorators.h  qColadaAppPythonQtDecorators_p.h  qColadaApplication.cxx  qColadaApplication.h  (+124 more)
Applications/ColadaApp/Resources/: App.qrc
Applications/ColadaApp/Resources/StyleSheets/: ColadaDarkStyle.qss  ColadaLightStyle.qss
Applications/ColadaApp/StylePlugins/: CMakeLists.txt  ColadaStyle.json  qColadaStylePlugin.cxx  qColadaStylePlugin.h
Applications/ColadaApp/Widgets/: qAppStyle.cxx  qAppStyle.h  qCRSWidget.cxx  qCRSWidget.h  qColadaNewProject.cxx  qColadaNewProject.h
Applications/ColadaCore/: CMakeLists.txt  ColadaDBCore.cxx  ColadaDBCore.h
Applications/ColadaQTApp/: CMakeLists.txt  qCRSWidget.cxx  qCRSWidget.h  qCRSWidget_p.h  qColadaH5Item.cxx  qColadaH5Item.h  qColadaH5ItemDelegate.cxx  qColadaH5ItemDelegate.h  qColadaH5Item_p.h  qColadaH5Model.cxx  qColadaH5Model.h  qColadaH5Model_p.h  qColadaH5ProxyModel.cxx  qColadaH5ProxyModel.h  qColadaH5ProxyModel_p.h  qColadaH5SeisModel.cxx  qColadaH5SeisModel.h  qColadaH5SeisModel_p.h  qColadaH5SeisTreeView.h  qColadaH5SeisTreeView_p.h  qColadaH5SurfModel.cxx  qColadaH5SurfModel.h  qColadaH5SurfModel_p.h  qColadaH5SurfTreeView.cxx  qColadaH5SurfTreeView.h  qColadaH5SurfTreeView_p.h  qColadaH5TreeView.cxx  qColadaH5TreeView_p.h  qColadaH5WellModel.cxx  qColadaH5WellModel.h  qColadaH5WellModel_p.h  qColadaH5WellTreeView.cxx  qColadaH5WellTreeView.h  qColadaH5WellTreeView_p.h  qColadaNewProject.cxx  qColadaNewProject.h  qColadaReader.cxx  qColadaReader.h  qColadaReader_p.h  qColadaSegyReader.cxx  (+23 more)
Applications/Libs/: CMakeLists.txt
Applications/Libs/vtkEigen/: CMakeLists.txt  vtkEigenConfig.cmake.in  vtkEigenDoubleArray.cxx  vtkEigenDoubleArray.h  vtkEigenFloatArray.cxx  vtkEigenFloatArray.h  vtkEigenProbeFilter.cxx  vtkEigenProbeFilter.h  vtkEigen_export.h  vtkRaisedGrid.cxx  vtkRaisedGrid.h
Applications/Python/: CMakeLists.txt
Applications/Python/colada/: __init__.py  kits.py.in  qColadaDevReader.py  qColadaLasReader.py  qColadaMapReader.py  qColadaSurfReader.py
Extensions/Seismic/: CMakeLists.txt
Extensions/Seismic/Axes/: CMakeLists.txt  qSlicerAxesModule.cxx  qSlicerAxesModule.h  qSlicerAxesModuleWidget.cxx  qSlicerAxesModuleWidget.h
Extensions/Seismic/Axes/Logic/: vtkSlicerAxesLogic.cxx  vtkSlicerAxesLogic.h
Extensions/Seismic/Axes/MRMLDM/: CMakeLists.txt  vtkMRMLAxesDisplayableManager2D.cxx  vtkMRMLAxesDisplayableManager2D.h  vtkMRMLAxesDisplayableManager3D.cxx  vtkMRMLAxesDisplayableManager3D.h  vtkSlicerTwoDAxesDisplayableManager.cxx  vtkSlicerTwoDAxesDisplayableManager.h
Extensions/Seismic/Axes/Resources/: qSlicerAxesModule.qrc
Extensions/Seismic/Axes/Resources/UI/: qSlicerAxesFooBarWidget.ui  qSlicerAxesModuleWidget.ui
Extensions/Seismic/Axes/Widgets/: qSlicerAxesFooBarWidget.cxx  qSlicerAxesFooBarWidget.h
Extensions/Seismic/StackLoad/: CMakeLists.txt  qSlicerStackLoadModule.cxx  qSlicerStackLoadModule.h  qSlicerStackLoadModuleWidget.cxx  qSlicerStackLoadModuleWidget.h  vtkEigenDoubleArray.cxx  vtkEigenDoubleArray.h  vtkEigenFloatArray.cxx  vtkEigenFloatArray.h
Extensions/Seismic/StackLoad/Logic/: vtkSlicerStackLoadLogic.cxx  vtkSlicerStackLoadLogic.h
Extensions/Seismic/StackLoad/MRMLDM/: CMakeLists.txt  vtkSlicerCubeAxesDisplayableManager3d.cxx  vtkSlicerCubeAxesDisplayableManager3d.h  vtkSlicerStackLoadDisplayableManager.cxx  vtkSlicerStackLoadDisplayableManager.h  vtkStackLoadDisplayableManager.cxx  vtkStackLoadDisplayableManager.h
Extensions/Seismic/StackLoad/Resources/: qSlicerStackLoadModule.qrc
Extensions/Seismic/StackLoad/Resources/UI/: qSlicerStackLoadModuleWidget.ui
Extensions/Seismic/StackLoad/Widgets/: CMakeLists.txt  qSlicerStackLoadCubeAxesActorBtn.cxx  qSlicerStackLoadCubeAxesActorBtn.h
Extensions/Seismic/Zoom/: CMakeLists.txt  qSlicerZoomModule.cxx  qSlicerZoomModule.h  qSlicerZoomModuleWidget.cxx  qSlicerZoomModuleWidget.h
Extensions/Seismic/Zoom/Logic/: CMakeLists.txt  vtkSlicerZoomLogic.cxx  vtkSlicerZoomLogic.h
Extensions/Seismic/Zoom/Resources/: qSlicerZoomModule.qrc
Extensions/Seismic/Zoom/Resources/UI/: qSlicerZoomFooBarWidget.ui  qSlicerZoomModuleWidget.ui
Extensions/Seismic/Zoom/Widgets/: CMakeLists.txt  qSlicerGainWidget.cxx  qSlicerGainWidget.h  qSlicerGainWidget_p.h  qSlicerZoomFooBarWidget.cxx  qSlicerZoomFooBarWidget.h
Modules/Loadable/SceneFilter/: CMakeLists.txt  qSlicerSceneFilterModule.cxx  qSlicerSceneFilterModule.h  qSlicerSceneFilterModuleWidget.cxx  qSlicerSceneFilterModuleWidget.h
Modules/Loadable/SceneFilter/Logic/: CMakeLists.txt  vtkSlicerSceneFilterLogic.cxx  vtkSlicerSceneFilterLogic.h
Modules/Loadable/SceneFilter/Resources/: qSlicerSceneFilterModule.qrc
Modules/Loadable/SceneFilter/Widgets/: qSlicerSceneFilterWidget.cxx  qSlicerSceneFilterWidget.h
Modules/Loadable/SpatialReference/: CMakeLists.txt  qSlicerSpatialReferenceModule.cxx  qSlicerSpatialReferenceModule.h  qSlicerSpatialReferenceSettingsPanel.cxx  qSlicerSpatialReferenceSettingsPanel.h
Modules/Loadable/SpatialReference/Resources/: qSlicerSpatialReferenceModule.qrc
Modules/Scripted/GeoObjectInfo/: CMakeLists.txt  GeoObjectInfo.py
Modules/Scripted/GeoObjectInfo/Resources/: GeoObjectInfoResources.qrc
(+109 files in other folders)
